--- a/app1/Gemfile
+++ b/app1/Gemfile
@@ -16,7 +16,7 @@ group :assets do
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
   # gem 'therubyracer', :platforms => :ruby
-
+  gem 'bootstrap-sass', '2.3.2.2'
   gem 'uglifier', '>= 1.0.3'
 end
 
